--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Lobster", cursive;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+/* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+.ui.form {
+  width: 100% !important;
+  max-width: 420px !important;
+  margin: auto !important;
+  text-align: initial !important;
+  padding: 30px !important;
+  /* background: linear-gradient(45deg, #e349c2, #0083fdd9) !important; */
+  border-radius: 20px !important;
+}
+
+.ui.grid {
+  margin-top: initial !important;
+  margin-bottom: initial !important;
+}
+
+.ui.grid > .row {
+  padding-top: initial !important;
+  padding-bottom: initial !important;
+}
+.ui.form .field > label {
+  color: #93aac8 !important;
+  font-size: 16px !important;
+  padding: 8px 0px;
+  font-family: "Poppins";
+  font-weight: 500;
+}
+#curveHolder {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 400px;
+  padding-top: 100px;
+  background: #0a184a;
+}
+#curveView {
+  position: absolute;
+  height: 50px;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+  background: #6358ee;
+}
+
+#curveView::before {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 51% 55%;
+  width: 55%;
+  height: 320px;
+  transform: translate(114%, -27%);
+  background-color: #6358ee;
+}
+
+#curveView::after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 50% 125%;
+  width: 55%;
+  height: 310px;
+  background-color: #6358ee;
+  transform: translate(-24%, -53%);
+  visibility: initial !important;
+  overflow: initial !important;
+}
+#waveBox {
+  overflow: hidden;
+}
+#navBar {
+  background: #0a184a;
+}
+#appName {
+  font-family: "Lobster";
+  font-size: 27px;
+  color: #6f64ff;
+}
+#inputView {
+  padding: 14px;
+  background: #2a3664;
+  color: #93aac8 !important;
+  font-size: 16px !important;
+
+  -webkit-box-shadow: initial !important;
+}
+#btnSubmit {
+  margin: 10px 0px;
+  width: 100%;
+  padding: 14px;
+  background: linear-gradient(45deg, #453cc6, #6f64ff);
+}
+::placeholder {
+  color: #93aac8 !important;
+  font-size: 16px !important;
+}
+#languageChoice {
+  width: 57px;
+  height: initial;
+  padding: 11px;
+  border: 1px solid #6358ee;
+  border-radius: 5px;
 }
