--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   background-color: #0a184a;
 }
@@ -36,4 +36,10 @@
   to {
     transform: rotate(360deg);
   }
+} */
+.App {
+  text-align: center;
+  background-color: #0a184a;
+  height: 100vh;
+  overflow: auto;
 }
